--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
     "*.cjson": "jsonc",
     "*.wxss": "css",
     "*.wxs": "javascript",
-    "ostream": "cpp"
+    "ostream": "cpp",
+    "type_traits": "cpp",
+    "vector": "cpp",
+    "iostream": "cpp"
   }
 }
